<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.michaelusry.birthdays.MainActivity">

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/firstname" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/firstName"
        android:layout_marginTop="65dp"
        android:text="@string/lastname"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastName"
        android:layout_below="@+id/lastName"
        android:layout_marginTop="20dp"
        android:text="@string/dateofbirth" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/fn_et"
        android:layout_alignBottom="@+id/firstName"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/ln_et"
        android:layout_below="@+id/fn_et"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/bd_et"
        android:layout_alignBottom="@+id/dateOfBirth"
        android:layout_alignLeft="@+id/fn_et"
        android:layout_alignStart="@+id/fn_et"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:id="@+id/btn_save"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btn_done"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_done"
        android:id="@+id/btn_done"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_save"/>


</RelativeLayout>